--- a/test-output/old/Suite/groups.html
+++ b/test-output/old/Suite/groups.html
@@ -1,3 +1,1 @@
-<h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Search1</td><td>TestCase_Booking_smoke.test_Search(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:TestCases.TestCase_Booking_smoke@5c5a1b69]<br/>TestCase_Booking_smoke.test_Search(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:TestCases.TestCase_Booking_smoke@167fdd33]<br/></td></tr>
-</table>
+<h2>Groups used for this test run</h2>
