--- a/test-output/old/Suite/methods-not-run.html
+++ b/test-output/old/Suite/methods-not-run.html
@@ -1,11 +1,6 @@
 <h2>Methods that were not run</h2><table>
 <tr><td>TestCases.TestCase_Booking_smoke.select_productRelated</td></tr>
-<tr><td>TestCases.TestCase_Booking_smoke.select_productPrice</td></tr>
-<tr><td>TestCases.TestCase_Booking_smoke.address</td></tr>
-<tr><td>TestCases.TestCase_Booking_smoke.select_productOffers</td></tr>
-<tr><td>TestCases.TestCase_Booking_smoke.test_login</td></tr>
-<tr><td>TestCases.TestCase_Booking_smoke.select_Descripition</td></tr>
-<tr><td>TestCases.TestCase_Booking_smoke.select_productRelated</td></tr>
+<tr><td>TestCases.TestCase_Booking_smoke.test_Search</td></tr>
 <tr><td>TestCases.TestCase_Booking_smoke.select_productPrice</td></tr>
 <tr><td>TestCases.TestCase_Booking_smoke.address</td></tr>
 <tr><td>TestCases.TestCase_Booking_smoke.select_productOffers</td></tr>
